# Stereo-depth-reconstruction

./: CMakeLists.txt  README.md  cam_stereo17.yml  depth_filter.cpp  main.cpp
Matlab/: Splitframe.m  split.m  splitsingle.m
